<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alumno"
            android:icon="@drawable/ic_student"
            android:title="@string/alumnos" />
        <item
            android:id="@+id/nav_profesor"
            android:icon="@drawable/ic_teacher"
            android:title="@string/profesores" />
        <item
            android:id="@+id/nav_niveles"
            android:icon="@drawable/ic_certificate"
            android:title="@string/niveles" />
        <item
            android:id="@+id/nav_horario"
            android:icon="@drawable/ic_calendar"
            android:title="@string/horario" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
